--- a/notebooks/orig_showrejper.ipynb
+++ b/notebooks/orig_showrejper.ipynb
@@ -968,6 +968,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Experimentation\n",
+        "\n",
+        "in some of the tests..."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
