--- a/notebooks/showrejper_gemma3.ipynb
+++ b/notebooks/showrejper_gemma3.ipynb
@@ -123,11 +123,10 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Generating harmful split: 100%|██████████| 100/100 [00:00<00:00, 10235.75 examples/s]\n",
-            "Generating benign split: 100%|██████████| 100/100 [00:00<00:00, 17878.53 examples/s]\n"
+            "mkdir: cannot create directory ‘logs/’: File exists\n"
           ]
         }
       ],
@@ -179,7 +178,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_3260/3853452036.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+            "/tmp/ipykernel_3576/3853452036.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
             "  badness = torch.tensor(torch.load(DIRECTION_FILE))\n"
           ]
         }
@@ -295,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -452,7 +451,10 @@
           "output_type": "stream",
           "text": [
             "Setting max GPU memory to 42GB\n",
-            "Fetching 2 files:   0%|          | 0/2 [00:00<?, ?it/s]"
+            "Fetching 2 files: 100%|██████████| 2/2 [00:03<00:00,  1.88s/it]\n",
+            "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.07s/it]\n",
+            "Loaded Gemma-3 model.\n",
+            "Model: google/gemma-3-4b-it loaded successfully.\n"
           ]
         }
       ],
@@ -479,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:35:55.363801Z",
@@ -520,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:35:57.709051Z",
@@ -553,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:35:58.260292Z",
@@ -582,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:36:00.437153Z",
@@ -639,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:36:08.902918Z",
@@ -667,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:36:09.036963Z",
@@ -696,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T18:02:04.741458Z",
@@ -727,7 +729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T18:24:49.863307Z",
@@ -742,37 +744,17 @@
       },
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
             "Starting inference...\n",
-            "Processing batch 56/160...\n",
-            "59.55610466003418\n",
-            "Processing batch 64/160...\n",
-            "60.11796236038208\n",
-            "Processing batch 72/160...\n",
-            "59.60020732879639\n",
-            "Processing batch 80/160...\n",
-            "63.34852933883667\n",
-            "Processing batch 88/160...\n",
-            "62.62357258796692\n",
-            "Processing batch 96/160...\n",
-            "63.08343029022217\n",
-            "Processing batch 104/160...\n",
-            "62.75775098800659\n",
-            "Processing batch 112/160...\n",
-            "61.396060943603516\n",
-            "Processing batch 120/160...\n",
-            "63.36189007759094\n",
-            "Processing batch 128/160...\n",
-            "58.917701721191406\n",
-            "Processing batch 136/160...\n",
-            "56.22689461708069\n",
-            "Processing batch 144/160...\n",
-            "61.71900415420532\n",
-            "Processing batch 152/160...\n",
-            "58.74079465866089\n",
-            "Inference complete. Activations are stored in 'outputs/gemma-3-4b-it/attack'.\n"
+            "/usr/local/lib/python3.10/dist-packages/transformers/generation/configuration_utils.py:628: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/transformers/generation/configuration_utils.py:633: UserWarning: `do_sample` is set to `False`. However, `top_p` is set to `0.95` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_p`.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/transformers/generation/configuration_utils.py:650: UserWarning: `do_sample` is set to `False`. However, `top_k` is set to `64` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_k`.\n",
+            "  warnings.warn(\n",
+            "Inference complete. Activations stored in 'outputs/'.\n"
           ]
         }
       ],
@@ -819,7 +801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "3qKShkPTqmOm"
       },
@@ -837,7 +819,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "Zq1Vs4n5qkpS"
       },
@@ -848,7 +830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:36:25.305202Z",
@@ -867,7 +849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:36:33.428186Z",
@@ -910,7 +892,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "99UBDnPw4D_B"
       },
@@ -955,40 +937,6 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Starting inference...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/transformers/generation/configuration_utils.py:629: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.11/dist-packages/transformers/generation/configuration_utils.py:634: UserWarning: `do_sample` is set to `False`. However, `top_p` is set to `0.95` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_p`.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.11/dist-packages/transformers/generation/configuration_utils.py:651: UserWarning: `do_sample` is set to `False`. However, `top_k` is set to `64` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `top_k`.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
-            "Starting inference...\n",
             "Starting inference...\n",
             "Starting inference...\n",
             "Starting inference...\n",
