--- a/notebooks/showrejper_gemma3.ipynb
+++ b/notebooks/showrejper_gemma3.ipynb
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:32:35.574936Z",
@@ -147,8 +147,7 @@
         "\n",
         "hf_token = \"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\"\n",
         "\n",
-        "DIRECTION_FILE = \"data/badnessdir.pt\"\n",
-        "ds = load_dataset(\"JailbreakBench/JBB-Behaviors\", \"behaviors\")"
+        "DIRECTION_FILE = \"data/badnessdir.pt\""
       ]
     },
     {
@@ -198,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:32:55.457662Z",
@@ -217,8 +216,7 @@
         "angrypayloads = angrydf.forbidden_prompt.tolist()\n",
         "happypayloads = happydf.values.flatten().tolist()\n",
         "\n",
-        "all_texts = angrypayloads[:192] + happypayloads[:96]\n",
-        "all_texts = ds['harmful']['Goal'] + ds['benign']['Goal']"
+        "all_texts = angrypayloads[:192]# + happypayloads[:96]"
       ]
     },
     {
@@ -698,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T18:02:04.741458Z",
@@ -712,8 +710,11 @@
       },
       "outputs": [],
       "source": [
-        "all_texts = [insert_template(payload) for payload in angrypayloads[:80]]\n",
-        "all_texts += [insert_payload(payload) for payload in angrypayloads[:80]]"
+        "#all_texts = [insert_template(payload) for payload in angrypayloads[:80]]\n",
+        "#all_texts += [insert_payload(payload) for payload in angrypayloads[:80]]\n",
+        "\n",
+        "all_texts = [insert_template(payload) for payload in angrypayloads[:192]]\n",
+        "all_texts += [insert_payload(payload) for payload in angrypayloads[:192]]"
       ]
     },
     {
@@ -1315,7 +1316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T18:46:28.768805Z",
@@ -1330,7 +1331,7 @@
       "outputs": [],
       "source": [
         "# 85 is the minimum from the above output, you may want to automate this\n",
-        "min = min([hs.shape[2] for hs in accact['hidden_states']])\n",
+        "minseqlen = min([hs.shape[2] for hs in accact['hidden_states']])\n",
         "all_hidden_states = np.array(torch.cat([batch[:,:,-min:,:] for batch in accact['hidden_states']], axis=1))"
       ]
     },
@@ -1514,7 +1515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T19:53:39.671267Z",
@@ -1528,14 +1529,14 @@
       },
       "outputs": [],
       "source": [
-        "y = projection[-1, :80, 35]\n",
-        "x = projection[-1, 80:, 35]\n",
+        "y = projection[-1, :192, minseqlen - 50]\n",
+        "x = projection[-1, 192:, minseqlen - 50]\n",
         "v = y - x"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T19:53:40.206184Z",
@@ -1551,8 +1552,8 @@
       "source": [
         "# same again magic numbers, just change indices\n",
         "\n",
-        "ref = refused[80:] == 1\n",
-        "notref = refused[80:] == 0"
+        "ref = refused[192:] == 1\n",
+        "notref = refused[192:] == 0"
       ]
     },
     {
@@ -1665,6 +1666,22 @@
         "plt.xlabel('jb harm')\n",
         "plt.xlim(-10, 70)\n",
         "plt.ylim(-10, 70)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.gca().set_aspect('equal', adjustable='box')\n",
+        "plt.scatter(x[ref], y[ref], marker='*', color='orange')\n",
+        "plt.scatter(x[notref], y[notref], marker='o', color='blue')\n",
+        "plt.quiver(y, y, -v, 0, scale=200, width=0.005, alpha=0.1)\n",
+        "plt.ylabel('attack harm')\n",
+        "plt.xlabel('jb harm')\n",
+        "plt.xlim(-50, 200)\n",
+        "plt.ylim(-50, 200)"
       ]
     }
   ],
