ran notebooks, saved badnessdir

--- a/notebooks/showrejper_gemma3.ipynb
+++ b/notebooks/showrejper_gemma3.ipynb
@@ -552,7 +552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-04-06T20:35:58.260292Z",
@@ -568,7 +568,10 @@
       "source": [
         "def register_hooks(scale, layers=[i for i in range(0, 34)]):\n",
         "    for i in layers:\n",
-        "        layer_module = model.language_model.model.layers[i]\n",
+        "        if \"gemma-3\" in MODEL_NAME:\n",
+        "            layer_module = model.language_model.model.layers[i]\n",
+        "        else:\n",
+        "            layer_module.register_forward_hook(add_direction_hook(i, scale))\n",
         "        layer_module.register_forward_hook(add_direction_hook(i, scale))"
       ]
     },
